--- a/.travis.yaml
+++ b/.travis.yaml
@@ -13,13 +13,13 @@ script:
   - docker build -t udagram-api-feed ./udagram-api-feed
   - docker build -t udagram-api-user ./udagram-api-user
   - docker build -t udagram-frontend ./udagram-frontend
-  - 'docker tag udagram-reverseproxy monolith/udagram-reverseproxy:v4a'
-  - 'docker tag udagram-api-feed monolith/udagram-api-feed:v4a'
-  - 'docker tag udagram-api-user monolith/udagram-api-user:v4a'
-  - 'docker tag udagram-frontend monolith/udagram-frontend:local'
+  - docker tag udagram-reverseproxy madmat12/udagram-reverseproxy:v4a
+  - docker tag udagram-api-feed madmat12/udagram-api-feed:v4a
+  - docker tag udagram-api-user madmat12/udagram-api-user:v4a
+  - docker tag udagram-frontend madmat12/udagram-frontend:local
 after_success:
   - echo "$DOCKER_PASSWORD" docker login -u "$DOCKER_USERNAME" --password-stdin
-  - 'docker push monolith/udagram-reverseproxy:v4a'
-  - 'docker push monolith/udagram-api-feed:v4a'
-  - 'docker push monolith/udagram-api-user:v4a'
-  - 'docker push monolith/udagram-frontend:local'
+  - docker push madmat12/udagram-reverseproxy:v4a
+  - docker push madmat12/udagram-api-feed:v4a
+  - docker push madmat12/udagram-api-user:v4a
+  - docker push madmat12/udagram-frontend:local
